<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ECOmmuters</string>
    <string name="gps_enabled">GPS abilitato</string>
    <string name="need_gps">Questa applicazione richiede l\'uso del GPS, ma è attualmente disattivato; vuoi attivarlo adesso?</string>
    <string name="btn_map">Mappa</string>
    <string name="coordinates">Latitudine : %1$d\r\nlongitudine: %2$d\r\naltitudine: %3$f</string>
    <string name="your_position">La tua posizione</string>
    <string name="wrong_version">La versione dell\'applicazione non è allineata con quella del server, per proseguire occorre scaricare l\'aggiornamento.</string>
    <string name="show_position_menu">Visualizza posizione</string>
    <string name="hide_position_menu">Nascondi posizione</string>
    <string name="ecommuters_logo">Logo di ECOmmuters</string>
    <string name="btn_new_route">Registra itinerario&#8230;</string>
    <string name="credential_email">EMail</string>
    <string name="credential_password">Password</string>
    <string name="insert_credential_title">Inserisci le credenziali</string>
    <string name="user_credentials">Le mie credenziali</string>
    <string name="retrieving_info">Sto recuperando le informazioni dal server&#8230;</string>
    <string name="site_url">www.ecommuters.com</string>
    <string name="credential_description">Non le hai ancora? <a href="http://www.ecommuters.com/register">Diventa ECOmmuter!</a></string>
    <string name="welcome_s">Benvenuto, %s</string>
    <string name="stop_recording">Ferma registrazione</string>
    <string name="recording_started">Registrazione avviata; premi il pulsante lampeggiante per interromperla.</string>
    <string name="recording_stopped">Registrazione terminata</string>
    <string name="insert_route_name">Inserisci il nome dell\'itinerario; i caratteri ammessi sono lettere (non accentate), numeri, -  e .</string>
    <string name="recording_detail">Punti traccia: %d</string>
    <string name="action_settings">Impostazioni</string>
    <string name="recording">Registrazione in corso</string>
    <string name="gps_available">GPS disponibile.</string>
    <string name="gps_out_of_service">GPS fuori servizio</string>
    <string name="gps_temporarily_unavailable">GPS temporaneamente non disponibile</string>
    <string name="gps_disabled">GPS disabilitato</string>
    <string name="title_activity_credentials">CredentialsActivity</string>
    <string name="download_routes">Scarica itinerari</string>
    <string name="visible_routes">Itinerari visualizzati</string>
    <string name="routes">Itinerari</string>
    <string name="title_activity_my_routes">I miei itinerari</string>
    <string name="btn_my_routes">I miei itinerari</string>
    <string name="route_already_existing">Esiste già un itinerario con lo stesso nome: \'%s\'\r\n</string>
    <string name="route_succesfully_downloaded">Sono state scaricati con successo %d itinerari</string>
    <string name="internet_unavailable">Connessione Internet non disponibile</string>
    <string name="downloading">Sto scaricando…</string>
    <string name="pending_packages">Ci sono %1$d pacchetti in sospeso per l\'itinerario \'%2$s\' da mandare al server\r\n</string>
    <string name="no_routes">Non ci sono itinerari\r\n</string>
    <string name="record_route">Registra itinerario</string>
    <string name="my_routes">I miei itinerari</string>
    <string name="record">Record</string>
    <string name="overwrite_route_question">Itinerario già esistente, vuoi sovrascriverlo?</string>
    <string name="maintain_recording_question">Vuoi mantenere i dati registrati?</string>
    <string name="livetracking">Traccia posizione in tempo reale</string>
    <string name="manual_live_tracking_on">Live tracking manuale attivato</string>
    <string name="live_tracking_on">Live tracking attivo, tocca qui per interromperlo.</string>
    <string name="manual_live_tracking_off">Live tracking manuale disattivato</string>
    <string name="live_tracking_off">Live tracking disattivato.</string>
    <string name="verifying_credentials">Sto verificando le credenziali&#8230;</string>
    <string name="tracking_position">Sto inviando la tua posizione a www.ecommuters.com</string>
    <string name="title_activity_route_detail">Dettagli itinerario</string>
    <string name="delete_route">Elimina</string>
    <string name="route_properties">Proprietà&#8230;</string>
    <string name="confirm_delete_route">Confermi la cancellazione dell\'itinerario %s? Potrai comunque scaricarlo nuovamente dal server.</string>
    <string name="sample">sample</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="warning_to_user">Questa applicazione è in grado di tracciare la tua posizione e mandarla al sito &lt;a href=&quot;http://www.ecommuters.com&quot;&gt;www.ecommuters.com&lt;/a&gt;.&lt;br&gt;Ogni volta che questo accadrà, verrai avvisato con un messaggio di notifica; potrai comunque in ogni momento disabilitare questo comportamento.</string>
    <string name="no_show_again">Non mostrare più</string>
    <string name="title_activity_search">Ricerca ECOmmuter</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_hint">Nome o parte di esso</string>
    <string name="find_ecommuter">Trova ECOmmuter</string>
    <string name="select_ecommuter">Seleziona l\'ECOmmuter desiderato</string>
    <string name="no_ecommuter">Nessun ECOmmuter trovato</string>
    <string name="balloon_text">Posizione rilevata alle %s</string>
    <string name="refine_query">Visualizzati %1$d ECOmmuters, su un totale di %2$d corrispondenti ai criteri impostati; se non trovi la persona cercata prova a raffinare la ricerca.</string>
    <string name="time_start">Ora partenza:</string>
    <string name="time_end">Ora arrivo:</string>
    <string name="distance">Distanza:</string>
    <string name="duration">Tempo:</string>
    <string name="average_speed">Velocità media:</string>
    <string name="gps_activation">Attivazione GPS:</string>
    <string name="activate_gps_minutes">Attiva GPS (minuti prima della partenza):</string>
    <string name="stop_gps_minutes">Spegni GPS (minuti dopo la partenza)</string>
    <string name="monday">Lunedì</string>
    <string name="tuesday">Martedì</string>
    <string name="wednesday">Mercoledì</string>
    <string name="days">Giorni</string>
    <string name="thursday">Giovedì</string>
    <string name="friday">Venerdì</string>
    <string name="saturday">Sabato</string>
    <string name="sunday">Domenica</string>
    <string name="searching">Sto cercando...</string>

</resources>